# daily-task-manager

./: .gitignore  LICENSE  README.md  pyproject.toml
src/daily_task_manager/: __init__.py
